# nextjs_fastapi_template

./: AGENTS.md  README.md  codex-setup.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .env.sample  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/app/: database.py  schema.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 11444f484958_init.py  1c198add08e5_add_password_reset_tokens.py  55a37c1d5c06_create_password_reset_tokens.py  738565e1bc75_create_todo_list.py  7c2a4b5bf1a1_add_chat_messages.py  a5cc035d75d6_init.py  ff33171c7eed_add_google_oauth_tokens_table.py
backend/app/models/: ai_assistant.py  auth.py  chat.py  google_oauth.py  password.py  todo_list.py  user.py
backend/app/repositories/: chat_history.py  google_oauth_token.py  password_reset.py  todo_list.py  user.py
backend/app/routers/: routers.py
backend/app/routers/api/: ai_assistant.py  auth.py  chat.py  chats.py  gmail_integrated.py  google_oauth.py  mcp_gmail.py  users.py
backend/app/services/: auth.py  chat.py  gmail_integrated.py  google_oauth.py  llm.py  mcp_gmail.py  password_reset.py  user.py
backend/app/services/ai/: README.md  exceptions.py  executor.py  logger.py  models.py  operator.py  orchestrator.py  prompt_generator.py  spoke_config.py
backend/app/services/ai/spokes/: google_calendar.py  spoke_config.py  spoke_interface.py  spoke_loader.py  spoke_manager.py  spoke_system.py
backend/app/services/ai/spokes/google_calendar/: actions.json  spoke.py
backend/app/services/ai/spokes/todo_list/: actions.json  spoke.py
backend/app/utils/: database_utils.py  google_calendar.py  llm.py  test_database.py
backend/app/utils/auth/: clerk.py  email_password.py
backend/tests/: README.md  conftest.py
backend/tests/fixtures/: database.py  test_data.py  users.py
backend/tests/mocks/: __init__.py
backend/tests/routers/: test_health.py
backend/tests/routers/api/: __init__.py  test_auth.py  test_health.py  test_users.py
docs/: README.md  architecture.md  backend.md  contributing.md  docker.md  environment.md  frontend.md  testing.md
frontend/: .env.example  .env.sample  .gitignore  Dockerfile  components.json  middleware.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/types/: Chat.ts  User.ts
frontend/utils/: api.ts  datetime.ts
(+47 files in other folders)
