[project]
name = "NextJS_FastAPI_Template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "clerk-backend-api>=2.0.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "setuptools>=79.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
