[project]
name = "fastapi-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "clerk-backend-api>=2.0.2",
    "cryptography>=44.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth>=2.40.2",
    "google-auth-oauthlib>=1.2.2",
    "openai>=1.82.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "setuptools>=79.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]
